# backend/internal/pkg/grand_prix/delivery/http/gp_handler.go
@@ -26,14 +26,15 @@ func NewDriverHandler(m *mux.Router,
 		qualResultUsecase: qualResultUsecase,
 	}
 
+	m.HandleFunc("/api/grandprix", handler.GetAllBySeason).Queries("season", "{season}").Methods("GET")
 	m.HandleFunc("/api/grandprix", handler.GetAll).Methods("GET")
 	//m.HandleFunc("/api/grandprix/id/{id}", handler.GetGPById).Methods("GET")
 	m.HandleFunc("/api/grandprix/{id}", handler.GetGPById).Methods("GET")
-	m.HandleFunc("/api/grandprix/season/{season}", handler.GetAllBySeason).Methods("GET")
 	//m.HandleFunc("/api/grandprix/place/{place}", handler.GetAllByPlace).Methods("GET")
 	m.Handle("/api/grandprix", middleware.AuthMiddleware(http.HandlerFunc(handler.Create), "admin")).Methods("POST")
 	m.Handle("/api/grandprix/{id}", middleware.AuthMiddleware(http.HandlerFunc(handler.Update), "admin")).Methods("PUT")
 	m.Handle("/api/grandprix/{id}", middleware.AuthMiddleware(http.HandlerFunc(handler.Delete), "admin")).Methods("DELETE")
+	m.Handle("/api/grandprix/{id}/name", middleware.AuthMiddleware(http.HandlerFunc(handler.UpdateGPName), "admin")).Methods("PATCH")
 	m.Handle("/api/grandprix/{id}/race_results", middleware.AuthMiddleware(http.HandlerFunc(handler.GetRaceResultsOfGP), "admin", "user")).Methods("GET")
 	m.Handle("/api/grandprix/{id}/qual_results", middleware.AuthMiddleware(http.HandlerFunc(handler.GetQualResultsOfGP), "admin", "user")).Methods("GET")
 	m.HandleFunc("/api/grandprix/{id}/race_winner", handler.GetRaceWinnerOfGP).Methods("GET")
@@ -93,20 +94,19 @@ func (hander *grandPrixHandler) GetGPById(w http.ResponseWriter, r *http.Request
 	}
 }
 
-// @Summary Get gp by season
+// @Summary Get all gp
 // @Tags gp
-// @Description Get gp by season
-// @ID get-gp-by-season
+// @Description Get all gp
+// @ID get-all-gp
 // @Accept  json
 // @Produce  json
-// @Param season path string true "season"
+// @Param season query string false "season"
 // @Success 200 {object} models.GrandPrix
-// @Failure 400
 // @Failure 500
-// @Router /api/grandprix/season/{season} [get]
+// @Router /api/grandprix [get]
 func (hander *grandPrixHandler) GetAllBySeason(w http.ResponseWriter, r *http.Request) {
-	vars := mux.Vars(r)
-	season, err := strconv.Atoi(vars["season"])
+	res := r.URL.Query().Get("season")
+	season, err := strconv.Atoi(res)
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
@@ -226,6 +226,42 @@ func (handler *grandPrixHandler) Delete(w http.ResponseWriter, r *http.Request) 
 	}
 	err = handler.grandPrixUsecase.Delete(id)
 	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+}
+
+// @Summary Update gp name
+// @Tags gp
+// @Description Update gp name
+// @ID update-gp-name
+// @Accept  json
+// @Produce  json
+// @Param id path string true "id"
+// @Param input body string true "gp_name"
+// @Success 200
+// @Failure 400
+// @Failure 500
+// @Router /api/grandprix/{id}/name [patch]
+func (handler *grandPrixHandler) UpdateGPName(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	id, err := strconv.Atoi(vars["id"])
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+	decoder := json.NewDecoder(r.Body)
+	req := struct {
+		Name string `json:"gp_name"`
+	}{}
+	err = decoder.Decode(&req)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+	err = handler.grandPrixUsecase.UpdateGPName(id, req.Name)
+	if err != nil {
+		fmt.Println(err)
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
